Bug 692594 - gdevijs: missing error check
Summary: gdevijs: missing error check
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Printer Driver (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-14 15:59 UTC by Tim Waugh
Modified: 2011-10-30 06:52 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
0001-Missing-error-check-in-gdevijs.c-found-using-Coverit.patch (815 bytes, patch)
2011-10-14 15:59 UTC, Tim Waugh
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Waugh 2011-10-14 15:59:48 UTC
Created attachment 8004 [details]
0001-Missing-error-check-in-gdevijs.c-found-using-Coverit.patch

Missing error check in gdevijs.c, found using Coverity.
Comment 1 Alex Cherepanov 2011-10-30 06:52:32 UTC
The patch has been adopted and committed as a rev.
78727e97d82435052df2f8e0333e47671bafbc59

Thank you for your contribution to Ghostscript.