Bug 692594: gdevijs: add missing error check.

Add missing error check, found using Coverity.